# team_k_backend

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  deploy-docker-compose.yml  dev-docker-compose.yml  pyproject.toml
backend/: Dockerfile  gunicorn.conf.py  requirements.txt
backend/app/: .zshrceeeeeeeee  config.py  containers.py  main.py  mongo.py
backend/app/celery/: celery.py
backend/app/integrations/: gcs.py  replicate.py  vertex_ai.py
backend/app/interior/: __init__.py  dependencies.py
backend/app/user/: dependencies.py  mongo.py
backend/app/user/domain/: user.py
backend/app/utils/: jwt_utils.py  logger.py
data/mongo/collections/: interior_types.json
grafana/provisioning/dashboards/: FastAPI-Logs-Dashboard.json  FastAPI-Traefik-Logs-Dashboard.json
logging/: docker-compose.logging.yml
logging/filebeats/: filebeat.yml
logging/logstash/: logstash.conf  logstash.yml
mongo-init/: init.js
monitoring/: docker-compose.logging.yml  docker-compose.monitoring.yaml
monitoring/elasticsearch/: elasticsearch.yml
monitoring/filebeats/: filebeat.yml
monitoring/kibana/: kibana.yml
monitoring/logging/: loki-config.yaml  promtail-config.yaml
monitoring/logs/: simulate_log.py
monitoring/logstash/: logstash.conf  logstash.yml
monitoring/prometheus/: prometheus.yml
prometheus/: prometheus.yml
promtail/: config.yaml
qdrant/data/: raft_state.json
scripts/: convert_danawa_csv_to_json.py  init-mongo.js  log_viewer.py
scripts/mongo-init/: mongo-seed.Dockerfile
scripts/qdrant-init/: check_vector.py  qdrant-seed.Dockerfile  upload_qdrant.py
(+33 files in other folders)
