[project]
name = "team-k-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "debugpy>=1.8.14",
    "fastapi[standard]>=0.116.1",
    "passlib>=1.7.4",
    "pika>=1.3.2",
    "pymongo>=4.13.2",
    "redis>=6.2.0",
]
